deployments/kubernetes/service-tenama.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tenama
  name: tenama
  namespace: tenama-system
spec:
  ports:
  - port: 443
    name: https
    protocol: TCP
    targetPort: 8080
  selector:
    app: tenama
  sessionAffinity: None
  type: ClusterIP
